--- a/terraform/logical/static/app-values.yaml
+++ b/terraform/logical/static/app-values.yaml
@@ -409,6 +409,7 @@ connectivity:
 # values.yaml
 
 minio:
+  enabled: false
   # Set the deployment mode to 'standalone' to use a single MinIO server
   mode: standalone
 
