Adding dozuki.com to the cert issuer

--- a/terraform/logical/charts/dozuki/templates/cert-manager.yaml
+++ b/terraform/logical/charts/dozuki/templates/cert-manager.yaml
@@ -12,6 +12,7 @@ spec:
     solvers:
       - selector:
           dnsZones:
+            - "dozuki.com"
             - "dozuki.guide"
             - "dozuki.cloud"
             - "dozuki.app"
