Adding dozuki.com to the cert issuer

--- a/terraform/logical/charts/dozuki/templates/cert-manager.yaml
+++ b/terraform/logical/charts/dozuki/templates/cert-manager.yaml
@@ -15,6 +15,7 @@ spec:
             - "dozuki.guide"
             - "dozuki.cloud"
             - "dozuki.app"
+            - "dozuki.com"
         dns01:
           route53:
             region: us-east-1
