Fix incorrect frontegg connection credentials

--- a/terraform/logical/charts/dozuki/values.yaml
+++ b/terraform/logical/charts/dozuki/values.yaml
@@ -368,13 +368,13 @@ connectivity:
       username: "db_user"
       password: "db_password"
     mongo:
-      connectionString: "mongodb://frontegg-documents-mongodb/webhooks"
+      connectionString: "mongodb://dozuki-mongodb/webhooks"
 
   integrations-service:
     messageBroker:
       brokerList: "msk_bootstrap_brokers"
     mongo:
-      connectionString: "mongodb://frontegg-documents-mongodb/integrations"
+      connectionString: "mongodb://dozuki-mongodb/integrations"
     frontegg:
       slack:
         encryptionKey: "dummyval"
@@ -387,7 +387,7 @@ connectivity:
     messageBroker:
       brokerList: "msk_bootstrap_brokers"
     redis:
-      host: "frontegg-kvstore-redis-master"
+      host: "dozuki-redis-master"
       tls: "false"
     frontegg:
       clientId: "frontegg_client_id"
@@ -400,7 +400,7 @@ connectivity:
     messageBroker:
       brokerList: "msk_bootstrap_brokers"
     redis:
-      host: "frontegg-kvstore-redis-master"
+      host: "dozuki-redis-master"
       tls: "false"
     frontegg:
       channels: "slack"
