chore(ci): bump kubectl version

--- a/live/Dockerfile
+++ b/live/Dockerfile
@@ -2,13 +2,13 @@
 FROM devopsinfra/docker-terragrunt:aws-tf-1.5.2-tg-0.48.1
 
 # Set environment variables for kubectl version
-ENV KUBE_VERSION="v1.23.0"
+ENV KUBE_VERSION="v1.32.0"
 
 # Install kubectl and required dependencies
 RUN set -ex \
     && apt-get update \
     && apt-get install -y --no-install-recommends ca-certificates curl \
-    && curl -LO https://storage.googleapis.com/kubernetes-release/release/${KUBE_VERSION}/bin/linux/amd64/kubectl \
+    && curl -LO https://dl.k8s.io/release/${KUBE_VERSION}/bin/linux/amd64/kubectl \
     && chmod +x kubectl \
     && mv kubectl /usr/local/bin/ \
     && apt-get clean \
